[package]
name = "bcos_wasm"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
bench = false

[build-dependencies]
cbindgen = "0.20"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
hex = "0.4"
sha3 = "0.10"
wasmtime = "0.32.0"
futures = "0.3"
once_cell = "1.9.0"
async-std = "1.10.0"
lru = "0.7.2"
# tokio = {version = "1.15.0", features = ["rt","rt-multi-thread"]}
evmc-declare = { git = "https://github.com/FISCO-BCOS/evmc", rev = "83adbb6276fa2bc444e43f79668b110192ace2ee"}
evmc-vm = { git = "https://github.com/FISCO-BCOS/evmc", rev = "83adbb6276fa2bc444e43f79668b110192ace2ee"}
# evmc-sys = { git = "https://github.com/FISCO-BCOS/evmc", rev = "2e8bc3a6fc9c3cdbf5440b329dcdf0753faee43c"}

# [profile.release]
# lto=false
