[package]
name = "bcos_wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
bench = false

[build-dependencies]
cbindgen = "0.20"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
hex = "0.4"
sha3 = "0.10"
wasmtime = "0.40.1"
futures = "0.3"
once_cell = "1.9.0"
async-std = "1.10.0"
lru = "0.7.2"
libc = { version = "0.2", default-features = false }
# tokio = {version = "1.15.0", features = ["rt","rt-multi-thread"]}
evmc-declare = { git = "https://github.com/FISCO-BCOS/evmc", rev = "14d92c1dc612482326daeb1f24fc07c4fd97449c"}
evmc-vm = { git = "https://github.com/FISCO-BCOS/evmc", rev = "14d92c1dc612482326daeb1f24fc07c4fd97449c"}
# evmc-sys = { git = "https://github.com/FISCO-BCOS/evmc", rev = "2e8bc3a6fc9c3cdbf5440b329dcdf0753faee43c"}

[profile.release]
lto=true
