[package]
name = "bcos_wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
bench = false

[build-dependencies]
cbindgen = "0.20"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
hex = "0.4"
sha3 = "0.10"
wasmtime = { version = "1.0.1", default-features = false, features = [
    'async',
    'cache',
    'wat',
    'jitdump',
    'parallel-compilation',
    'cranelift',
    'pooling-allocator',
    'memory-init-cow',
] }
futures = "0.3"
once_cell = "1.9.0"
async-std = "1.10.0"
lru = "0.7.2"
libc = { version = "0.2", default-features = false }
# tokio = {version = "1.15.0", features = ["rt","rt-multi-thread"]}
# evmc-declare = { path = "../evmc/bindings/rust/evmc-declare" }
# evmc-vm = { path = "../evmc/bindings/rust/evmc-vm" }
evmc-declare = { git = "https://github.com/FISCO-BCOS/evmc", rev = "94c2b3fcd2d41db4a96600867634f4de700a3962" }
evmc-vm = { git = "https://github.com/FISCO-BCOS/evmc", rev = "94c2b3fcd2d41db4a96600867634f4de700a3962" }

[profile.release]
lto = false
